// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StatusDetail /> > Matches different config of Full Status Detail Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="translate(-5 0)"
          >
            <path
              d="M17.6,5 L27,5 L27,2.52631579 L17.6,5 Z M29,5 L32,5 L32,32 L10,32 L10,5 L29,0 L29,5 Z M26,25 L16,25 L16,22 C16,21 17,20 18,20 L24,20 C25,20 26,21 26,22 L26,25 Z M21,18 C19.3431458,18 18,16.6568542 18,15 C18,13.3431458 19.3431458,12 21,12 C22.6568542,12 24,13.3431458 24,15 C24,16.6568542 22.6568542,18 21,18 Z M14,27.96 L28,27.96 L28,9 L14,9 L14,27.96 Z"
            />
          </g>
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Inkomen
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Aanvraag Test item
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    />
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="ams-heading ams-heading--4 _ListHeading_a12ff2"
      >
        Test item-aanvraag
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                aanvraag
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  Uw aanvraag is binngekomen
                </p>
              </div>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            >
              <ul
                class="_DocumentList_7ed0ad"
              >
                <li
                  class="_DocumentListItem_7ed0ad"
                >
                  <span
                    class="_DocumentLinkWrap_81c3b4"
                  >
                    <span
                      class="_DownloadIcon_81c3b4"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="14"
                        viewBox="0 0 32 32"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <title>
                          download-icoon
                        </title>
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _DocumentLink_81c3b4"
                      href="/mijnamsterdamapi/kappie"
                    >
                      Documentje
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                inbehandeling
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                28 juli 2020
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  Uw aanvraag is in behandeling
                </p>
              </div>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<StatusDetail /> > Matches the Full Status Detail Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="translate(-5 0)"
          >
            <path
              d="M17.6,5 L27,5 L27,2.52631579 L17.6,5 Z M29,5 L32,5 L32,32 L10,32 L10,5 L29,0 L29,5 Z M26,25 L16,25 L16,22 C16,21 17,20 18,20 L24,20 C25,20 26,21 26,22 L26,25 Z M21,18 C19.3431458,18 18,16.6568542 18,15 C18,13.3431458 19.3431458,12 21,12 C22.6568542,12 24,13.3431458 24,15 C24,16.6568542 22.6568542,18 21,18 Z M14,27.96 L28,27.96 L28,9 L14,9 L14,27.96 Z"
            />
          </g>
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Inkomen
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Aanvraag Test item
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    >
      <p>
        This text will appear. Aanvraag Test item
      </p>
    </div>
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="ams-heading ams-heading--4 _ListHeading_a12ff2"
      >
        Test item-aanvraag
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                aanvraag
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  Uw aanvraag is binngekomen
                </p>
              </div>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            >
              <ul
                class="_DocumentList_7ed0ad"
              >
                <li
                  class="_DocumentListItem_7ed0ad"
                >
                  <span
                    class="_DocumentLinkWrap_81c3b4"
                  >
                    <span
                      class="_DownloadIcon_81c3b4"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="14"
                        viewBox="0 0 32 32"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <title>
                          download-icoon
                        </title>
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _DocumentLink_81c3b4"
                      href="/mijnamsterdamapi/kappie"
                    >
                      Documentje
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="_ListItem_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                inbehandeling
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                28 juli 2020
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  Uw aanvraag is in behandeling
                </p>
              </div>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<StatusDetail /> > Reverses the steps 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _DetailPage_47d7c0 _StatusDetail_3aea40"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="32px"
          viewBox="0 0 32 32"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="translate(-5 0)"
          >
            <path
              d="M17.6,5 L27,5 L27,2.52631579 L17.6,5 Z M29,5 L32,5 L32,32 L10,32 L10,5 L29,0 L29,5 Z M26,25 L16,25 L16,22 C16,21 17,20 18,20 L24,20 C25,20 26,21 26,22 L26,25 Z M21,18 C19.3431458,18 18,16.6568542 18,15 C18,13.3431458 19.3431458,12 21,12 C22.6568542,12 24,13.3431458 24,15 C24,16.6568542 22.6568542,18 21,18 Z M14,27.96 L28,27.96 L28,9 L14,9 L14,27.96 Z"
            />
          </g>
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Inkomen
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Aanvraag Test item
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0 _DetailPageContent_3aea40"
    />
    <div
      class="_StatusLine_a12ff2"
    >
      <h4
        class="ams-heading ams-heading--4 _ListHeading_a12ff2"
      >
        Test item-aanvraag
      </h4>
      <ul
        class="_List_a12ff2"
      >
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--start_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                inbehandeling
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                28 juli 2020
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  Uw aanvraag is in behandeling
                </p>
              </div>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            />
          </div>
        </li>
        <li
          class="_ListItem_a12ff2 _ListItem--highlight_a12ff2"
        >
          <div
            class="_ListItemInner_a12ff2"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="_StatusConnection_a12ff2"
            >
              <span
                class="_ConnectLine_a12ff2 _ConnectLine--middle-checked-next_a12ff2"
              />
              <span
                class="_Checkmark_a12ff2 _Checkmark--active_a12ff2 _Checkmark--checked_a12ff2"
              />
            </div>
            <div
              class="_Panel_a12ff2 _Panel--status_a12ff2"
            >
              <strong
                class="_StatusTitle_a12ff2"
              >
                aanvraag
              </strong>
              <time
                class="_StatusDate_a12ff2"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--description_a12ff2"
            >
              <div
                class="_PanelContent_a12ff2"
              >
                <p>
                  Uw aanvraag is binngekomen
                </p>
              </div>
            </div>
            <div
              class="_Panel_a12ff2 _Panel--documents_a12ff2"
            >
              <ul
                class="_DocumentList_7ed0ad"
              >
                <li
                  class="_DocumentListItem_7ed0ad"
                >
                  <span
                    class="_DocumentLinkWrap_81c3b4"
                  >
                    <span
                      class="_DownloadIcon_81c3b4"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="14"
                        viewBox="0 0 32 32"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                        xmlns:xlink="http://www.w3.org/1999/xlink"
                      >
                        <title>
                          download-icoon
                        </title>
                        <path
                          d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                        />
                      </svg>
                    </span>
                    <a
                      class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _DocumentLink_81c3b4"
                      href="/mijnamsterdamapi/kappie"
                    >
                      Documentje
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
